--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,139 @@
-<div class="jumbotron">
-  <div class="container">
-    <h4>Have a problem?</h4>
-    <h1>Tell us where. We're on it.</h1>
+<% include ./partials/header %>
 
-    <a class="btn btn-success btn-lg" href="/signup">I am a Citizen</a>
-    <a class="btn btn-warning btn-lg" href="/signup">I am a City Admin</a>
+<div class="container">
+
+  <div class="container text-center">
+      <div class="wrapper wow fadeInUp" >
+          <h2 class="top-title">Have a problem?</h2>
+          <h3 class="title">CityFix</h3>
+          <h6 class="top-title">Tell us where. We're on it.</h6>
+          <a class="btn btn-submit" href="/signup"><b>I AM A CITIZEN</b></a>
+          <br>
+          <a class="btn btn-submit" href="/signup"><b>I AM A CITY ADMIN</b></a>
+      </div>
   </div>
+  </div>
+  </header>
+
+  <!---->
+  <section id="cta-1">
+  <div class="container">
+  <div class="row">
+      <div class="cta-info text-center">
+          <h1><i>CityFix <b>improves neighbourhoods</b> by connecting residents and city governments.</i></h1>
+      </div>
+  </div>
+  </div>
+  </section>
+  <!---->
+
+  <!---->
+  <section id="feature" class="section-padding">
+  <div class="container">
+  <div class="row">
+      <div class="col-md-3 wow fadeInLeft delay-05s">
+          <div class="section-title">
+              <h2 class="head-title">About CityFix</h2>
+              <hr class="botm-line">
+              <p class="sec-para"><b>For Residents:</b> CityFix is a solution to help you improve the place you live in. If you witness something that needs fixing, such as a cracked pavement or a stained wall, send in a request! Our city public works officers will receive the requests and get to work as soon as they can. You can see on your own user account if your requests have been completed.</p>
+              <p class="sec-para"><b>For City Governments:</b> Handling requests from the public has never been simpler. Upon registering with a valid city admin ID, you will receive an overview of the public works requests from all your users. Feel free to prioritize or group your requests in any way that suits you. You should be allowed to focus on doing your work, rather than managing the work.</p><br>
+          </div>
+      </div>
+      <div class="col-md-9">
+          <div class="col-md-6 wow fadeInRight delay-02s">
+              <div class="icon">
+                  <i class="fa fa-bolt"></i>
+              </div>
+              <div class="icon-text">
+                  <h3 class="txt-tl">Admins: Real-Time Issue Reporting</h3>
+                  <p class="txt-para">Get to know about issues the moment they happen. No more frustrated residents waiting days just for city government officers to find out about the problem.</p>
+              </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-02s">
+              <div class="icon">
+                  <i class="fa fa-crosshairs"></i>
+              </div>
+              <div class="icon-text">
+                  <h3 class="txt-tl">Admins: Never lose sight of your work</h3>
+                  <p class="txt-para">Remember the days you used to be overwhelmed with paper or phone requests from residents, eventually forgetting some in the process? No more.</p>
+              </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-04s">
+              <div class="icon">
+                  <i class="fa fa-smile-o"></i>
+              </div>
+              <div class="icon-text">
+                  <h3 class="txt-tl">Admins: Focus on doing work, not managing work</h3>
+                  <p class="txt-para">CityFix gives you structure for your requests so you never have to worry about planning.</p>
+              </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-04s">
+              <div class="icon">
+                  <i class="fa fa-check-circle-o"></i>
+              </div>
+              <div class="icon-text">
+                  <h3 class="txt-tl">Residents: Your city admins are accountable to you</h3>
+                  <p class="txt-para">With CityFix, your city admins are bound to respond to your requests.</p>
+              </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-06s">
+              <div class="icon">
+                  <i class="fa fa-camera"></i>
+              </div>
+              <div class="icon-text">
+                  <h3 class="txt-tl">Residents: Communicate your problems clearly</h3>
+                  <p class="txt-para">Fallen tree? Cracked pavement? Snap a photo and post it on CityFix! Way clearer than describing it over the phone.</p>
+              </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-06s">
+              <div class="icon">
+                  <i class="fa fa-building"></i>
+              </div>
+              <div class="icon-text">
+                  <h3 class="txt-tl">Residents: Improve your neighbourhood</h3>
+                  <p class="txt-para">With CityFix, your streets will be cleaner and your public spaces will be better.</p>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+  </section>
+  <!---->
+  <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
+  <div class="container">
+  <div class="row">
+      <div class="col-md-8">
+          <div class="cta-txt">
+              <h2 class="sub-title text-center">GET STUFF DONE</h2>
+          </div>
+      </div>
+  </div>
+  </div>
+  </section>
+  <!---->
+  <!---->
+  <section class="section-padding wow fadeInUp delay-05s" id="contact">
+  <div class="container">
+  <div class="row white">
+      <div class="col-md-8 col-sm-12">
+          <div class="section-title">
+              <h2 class="head-title black">Contact Us</h2>
+              <hr class="botm-line">
+              <p class="sec-para black">We'd love to hear from you. Visit us, call us, or drop us an email! We'll be in touch.</p>
+          </div>
+      </div>
+
+          </div>
+          <div class="col-md-4 col-sm-10">
+              <div class="location-info">
+                  <p class="white"><span aria-hidden="true" class="fa fa-map-marker"></span>8 Claymore Hill, Singapore</p>
+                  <p class="white"><span aria-hidden="true" class="fa fa-phone"></span>Phone: +65 8123 4567</p>
+                  <p class="white"><span aria-hidden="true" class="fa fa-envelope"></span>Email: <a href="" class="link-dec">hello@cityfix.com</a></p>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+  </section>
 </div>
+<!---->
