--- a/views/issues/new.ejs
+++ b/views/issues/new.ejs
@@ -1,20 +1,24 @@
-<h1>Add new issue request</h1>
+<% include ../partials/header-inner %>
 
-<form method="post" action="/issues">
-  <h2>What request do you have today?</h2>
-  <div class="row">
-    <div class="form-group col-md-6">
-      <input type="text" class="form-control" name="issues[title]" id="title" placeholder="Title">
+<div class="container">
+  <h1>Add new issue request</h1>
+
+  <form method="post" action="/issues">
+    <h2>What request do you have today?</h2>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <input type="text" class="form-control" name="issues[title]" id="title" placeholder="Title">
+      </div>
+      <div class="form-group col-md-6">
+        <input type="text" class="form-control" name="issues[address]" id="address" placeholder="Address (Block and Street)">
+      </div>
+      <div class="form-group col-md-12">
+        <input type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Describe your problem">
+      </div>
+      <div class="form-group col-md-12">
+        <button type="submit" class="btn btn-success btn-block">
+          <span class="glyphicon glyphicon-save"></span> Add issue</button>
+      </div>
     </div>
-    <div class="form-group col-md-6">
-      <input type="text" class="form-control" name="issues[address]" id="address" placeholder="Address (Block and Street)">
-    </div>
-    <div class="form-group col-md-12">
-      <input type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Describe your problem">
-    </div>
-    <div class="form-group col-md-12">
-      <button type="submit" class="btn btn-success btn-block">
-        <span class="glyphicon glyphicon-save"></span> Add issue</button>
-    </div>
-  </div>
-</form>
+  </form>
+</div>
