--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,30 @@
-<footer>
-  <div class="container">
-    <hr><p>&copy CityFix</p>
-  </div>
+<br>
+<footer class="" id="footer">
+
+    <div class="container">
+          <div class="row">
+              <div class="col-sm-7 footer-copyright">
+                  <h3><b>CityFix, Inc.</b><br></h3>
+                  Jonathan Lim, GA Singapore WDI 8 <br>
+                  © Bethany Theme - All rights reserved
+                  <div class="credits">
+                      <!--All the links in the footer should remain intact.
+                          You can delete the links only if you purchased the pro version.
+                          Licensing information: https://bootstrapmade.com/license/
+                          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bethany-->
+                      Designed by <a href="https://bootstrapmade.com/">Bootstrap Themes</a>
+                  </div>
+              </div>
+              <div class="col-sm-5 footer-social">
+                  <div class="pull-right hidden-xs hidden-sm">
+                      <a href="#"><i class="fa fa-facebook"></i></a>
+                      <a href="#"><i class="fa fa-dribbble"></i></a>
+                      <a href="#"><i class="fa fa-twitter"></i></a>
+                      <a href="#"><i class="fa fa-google-plus"></i></a>
+                      <a href="#"><i class="fa fa-pinterest"></i></a>
+                  </div>
+              </div>
+          </div>
+    </div>
+
 </footer>
