--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,39 +1,40 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/"><b><span class="glyphicon glyphicon-ok-circle"></span> CityFix</b></a>
-    </div>
+<!--header-->
+<header class="main-header" id="header">
+    <div class="bg-color">
+        <!--nav-->
+        <nav class="nav navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="col-md-12">
+                    <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="fa fa-bars"></span>
+                    </button>
+                        <a href="/" class="navbar-brand">CityFix</a>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-left" id="mynavbar">
+                        <ul class="nav navbar-nav">
+                          <li><a href="/issues">View All</a></li>
+                        </ul>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-right" id="mynavbar">
+                        <ul class="nav navbar-nav">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <div class="col-md-5">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="/about"><span class="glyphicon glyphicon-info-sign "></span> About</a></li>
-        <li><a href="/issues"><span class="glyphicon glyphicon-eye-open"></span> View All Issues</a></li>
-      </div>
-    <% if (isAuthenticated) { %>
+                        <% if (isAuthenticated) { %>
 
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/<%=user.id%>"><span class="glyphicon glyphicon-user"></span> <%= user.local.firstName %> <%= user.local.lastName %></a></li>
-          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-        </ul>
+                              <li><a href="/users/<%=user.id%>"><span class="glyphicon glyphicon-user"></span> <%= user.local.firstName %> <%= user.local.lastName %></a></li>
+                              <li><a href="/logout">Logout</a></li>
 
-      <%} else {%>
+                          <%} else {%>
 
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span>  Login</a></li>
-          <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Register as New User</a></li>
-        </ul>
+                              <li><a href="/login">Login</a></li>
+                              <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Register as New User</a></li>
 
-    <% } %>
+                        <% } %>
 
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+<!--/ header-->
