tweaked heading css

--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -1,3 +1,13 @@
 form {
   display: inline;
 }
+
+.heading {
+  font-weight: bold;
+}
+
+.sub-heading {
+  font-weight: bold;
+  font-style: italic;
+  text-transform: uppercase;
+}
