--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <div class="container">
 
   <div class="container text-center">
-      <div class="wrapper wow fadeInUp" >
+      <div class="wrapper wow" >
           <h2 class="top-title">Have a problem?</h2>
           <h3 class="title">CityFix</h3>
           <h6 class="top-title">Tell us where. We're on it.</h6>
@@ -20,7 +20,7 @@
   <div class="container">
   <div class="row">
       <div class="cta-info text-center">
-          <h1><i>CityFix <b>improves neighbourhoods</b> by connecting residents and city governments.</i></h1>
+          <h1><i>CityFix <b>improves neighbourhoods</b> by <br> connecting residents and city governments.</i></h1>
       </div>
   </div>
   </div>
@@ -35,8 +35,8 @@
           <div class="section-title">
               <h2 class="head-title">About CityFix</h2>
               <hr class="botm-line">
-              <p class="sec-para"><b>For Residents:</b> CityFix is a solution to help you improve the place you live in. If you witness something that needs fixing, such as a cracked pavement or a stained wall, send in a request! Our city public works officers will receive the requests and get to work as soon as they can. You can see on your own user account if your requests have been completed.</p>
-              <p class="sec-para"><b>For City Governments:</b> Handling requests from the public has never been simpler. Upon registering with a valid city admin ID, you will receive an overview of the public works requests from all your users. Feel free to prioritize or group your requests in any way that suits you. You should be allowed to focus on doing your work, rather than managing the work.</p><br>
+              <p class="sec-para"><b>For Residents:</b> CityFix is a solution to help you improve the place you live in. If you witness something that needs fixing, such as a cracked pavement or a stained wall, send in a request! Our city public works officers will receive the requests and get to work as soon as they can.</p>
+              <p class="sec-para"><b>For City Governments:</b> Handling requests from the public has never been simpler. Upon registering with a valid city admin ID, you will receive an overview of the public works requests from all your users. You should be allowed to focus on doing your work, rather than managing the work.</p><br>
           </div>
       </div>
       <div class="col-md-9">
@@ -102,7 +102,7 @@
   <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
   <div class="container">
   <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-12">
           <div class="cta-txt">
               <h2 class="sub-title text-center">GET STUFF DONE</h2>
           </div>
