--- a/views/partials/userViewIssue.ejs
+++ b/views/partials/userViewIssue.ejs
@@ -1,7 +1,7 @@
 <div class="container">
-    <h1><%= issue.title%></h1>
-    <h3>Location: <%= issue.address%></h3>
-    <h3><i>"<%= issue.problem %>"</i></h3>
+    <h1 class="sub-heading"><%= issue.title%></h1>
+    <h4>Location: <%= issue.address%></h4>
+    <h2><i>"<%= issue.problem %>"</i></h2>
 
     <% var spellMonth = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']%>
     <% var spellDay = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']%>
