--- a/views/partials/adminViewIssue.ejs
+++ b/views/partials/adminViewIssue.ejs
@@ -1,13 +1,12 @@
 <div class="container">
-    <h1><%= issue.title%></h1>
-    <h3>Location: <%= issue.address%></h3>
-    <h3><i>"<%= issue.problem %>"</i></h3>
+    <h1 class="sub-heading"><%= issue.title%></h1>
+    <h4>Location: <%= issue.address%></h4>
+    <h2><i>"<%= issue.problem %>"</i></h2>
 
     <% var spellMonth = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']%>
     <% var spellDay = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']%>
 
     (created <%=issue.dateCreated.getHours()%>:<%=issue.dateCreated.getMinutes()%> hrs, <%=spellDay[issue.dateCreated.getDay()]%>,  <%=issue.dateCreated.getDate()%>  <%=spellMonth[issue.dateCreated.getMonth()+1]%> <%=issue.dateCreated.getFullYear()%>)
-    <br>
     by <%= issue.user_id.local.firstName %> <%= issue.user_id.local.lastName %>
 
     <% if( issue.isFixed === false) {%>
@@ -27,7 +26,7 @@
       <h4>Status: Completed</h4>
       <a class="btn btn-primary" href="/issues">
         <span class="glyphicon glyphicon-triangle-left"></span> Back</a>
-        
+
       <form method="POST" action="/issues/<%=issue.id%>/fix?_method=PUT&isFixed=false">
           <button class="btn btn-danger" type="submit">
             <span class="glyphicon glyphicon-wrench"></span> Re-open Issue
