added google maps MVP to each request + MVP for admin heatmap

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
   <section id="feature" class="section-padding">
   <div class="container">
   <div class="row">
-      <div class="col-md-3 wow fadeInLeft delay-05s">
+      <div class="col-md-3 wow">
           <div class="section-title">
               <h2 class="head-title">About CityFix</h2>
               <hr class="botm-line">
@@ -40,7 +40,7 @@
           </div>
       </div>
       <div class="col-md-9">
-          <div class="col-md-6 wow fadeInRight delay-02s">
+          <div class="col-md-6 wow">
               <div class="icon">
                   <i class="fa fa-bolt"></i>
               </div>
@@ -49,7 +49,7 @@
                   <p class="txt-para">Get to know about issues the moment they happen. No more frustrated residents waiting days just for city government officers to find out about the problem.</p>
               </div>
           </div>
-          <div class="col-md-6 wow fadeInRight delay-02s">
+          <div class="col-md-6 wow">
               <div class="icon">
                   <i class="fa fa-crosshairs"></i>
               </div>
@@ -58,7 +58,7 @@
                   <p class="txt-para">Remember the days you used to be overwhelmed with paper or phone requests from residents, eventually forgetting some in the process? No more.</p>
               </div>
           </div>
-          <div class="col-md-6 wow fadeInRight delay-04s">
+          <div class="col-md-6 wow">
               <div class="icon">
                   <i class="fa fa-smile-o"></i>
               </div>
@@ -67,7 +67,7 @@
                   <p class="txt-para">CityFix gives you structure for your requests so you never have to worry about planning.</p>
               </div>
           </div>
-          <div class="col-md-6 wow fadeInRight delay-04s">
+          <div class="col-md-6 wow">
               <div class="icon">
                   <i class="fa fa-check-circle-o"></i>
               </div>
@@ -76,7 +76,7 @@
                   <p class="txt-para">With CityFix, your city admins are bound to respond to your requests.</p>
               </div>
           </div>
-          <div class="col-md-6 wow fadeInRight delay-06s">
+          <div class="col-md-6 wow">
               <div class="icon">
                   <i class="fa fa-camera"></i>
               </div>
@@ -85,7 +85,7 @@
                   <p class="txt-para">Fallen tree? Cracked pavement? Snap a photo and post it on CityFix! Way clearer than describing it over the phone.</p>
               </div>
           </div>
-          <div class="col-md-6 wow fadeInRight delay-06s">
+          <div class="col-md-6 wow">
               <div class="icon">
                   <i class="fa fa-building"></i>
               </div>
@@ -99,7 +99,7 @@
   </div>
   </section>
   <!---->
-  <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
+  <section class="section-padding parallax bg-image-2 section wow" id="cta-2">
   <div class="container">
   <div class="row">
       <div class="col-md-12">
@@ -112,7 +112,7 @@
   </section>
   <!---->
   <!---->
-  <section class="section-padding wow fadeInUp delay-05s" id="contact">
+  <section class="section-padding wow" id="contact">
   <div class="container">
   <div class="row white">
       <div class="col-md-8 col-sm-12">
