--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -8,6 +8,24 @@ form {
 
 .sub-heading {
   font-weight: bold;
-  font-style: italic;
   text-transform: uppercase;
+}
+
+.user-map {
+  width: 100%;
+  height: 300px;
+}
+
+.admin-map {
+  width: 100%;
+  height: 400px;
+  border: 0px;
+}
+
+.success {
+  color: green;
+}
+
+.incomplete {
+  color: red;
 }
