login/signup validation added

--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -29,3 +29,11 @@ form {
 .incomplete {
   color: red;
 }
+
+.single-request {
+  padding: 0px 15px;
+}
+
+.end {
+  padding: 0px 15px 15px 15px;
+}
