--- a/views/partials/adminCompletedRequests.ejs
+++ b/views/partials/adminCompletedRequests.ejs
@@ -15,12 +15,14 @@
               <br><small>by <%= issue.user_id.local.firstName %> <%= issue.user_id.local.lastName %></small>
             </h3>
           </div>
-          <div class="panel-body">
+          <div class="panel-body single-request">
             <h4><i>"<%= issue.problem %>"</i></h4>
+          </div>
             <iframe class="user-map"
             frameborder="0" style="border:0"
             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyByUpVKGIl-ZT0MxU0yJBBIDdL_SIEVrJg&q=<%=issue.address%>" allowfullscreen>
             </iframe>
+          <div class="panel-body single-request end">
             <h5>Location: <%= issue.address %></h5>
             <a href="/issues/<%=issue.id%>" class="btn btn-primary">
               <span class="glyphicon glyphicon-eye-open"></span> View
