--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -1,3 +1,23 @@
+* {
+  border-radius: 0 !important;
+}
+
+.panel > .panel-custom {
+  background-image: none;
+  background-color: rgb(255, 199, 0);
+  color: black;
+}
+
+.panel > .panel-custom-completed {
+  background-image: none;
+  background-color: rgb(92, 184, 92);
+  color: white;
+}
+
+.panel {
+    box-shadow: 0 0 10px #e6e2e2;
+}
+
 form {
   display: inline;
 }
@@ -35,5 +55,11 @@ form {
 }
 
 .end {
-  padding: 0px 15px 15px 15px;
+  padding: 0px;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: grey;
 }
