--- a/views/issues/index.ejs
+++ b/views/issues/index.ejs
@@ -16,11 +16,27 @@
 
     <h1 class="heading">Hi, City Admin <%=user.local.firstName%>! Time to work.</h1>
 
-    <iframe class="admin-map" src="https://www.google.com/maps/d/embed?mid=1jYb4mswYi1NPLrGWl29daHLCva0"></iframe>
+    <div id="map"></div>
 
-    <pre><% issues.forEach(function(issue){ %>
-      <%= issue.address %>
-    <% }) %></pre>
+    <script>
+
+      function initMap() {
+              var uluru = {lat: -25.363, lng: 131.044};
+              var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 4,
+                center: uluru
+              });
+              var marker = new google.maps.Marker({
+                position: uluru,
+                map: map
+              });
+            }
+
+    </script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByUpVKGIl-ZT0MxU0yJBBIDdL_SIEVrJg&callback=initMap"></script>
+
+    <iframe class="admin-map" src="https://www.google.com/maps/d/embed?mid=1jYb4mswYi1NPLrGWl29daHLCva0"></iframe>
 
     <% include ../partials/adminPendingRequests %>
     <% include ../partials/adminCompletedRequests %>
