--- a/views/partials/adminPendingRequests.ejs
+++ b/views/partials/adminPendingRequests.ejs
@@ -8,7 +8,7 @@
     <% if( issue.isFixed === false) { %>
       <div class="col-md-4">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <div class="panel-heading panel-custom">
             <h3 class="panel-title sub-heading">
               <a href="/issues/<%=issue.id%>"><%= issue.title %></a>
               <br><small>(created <%=issue.dateCreated.getHours()%>:<%=issue.dateCreated.getMinutes()%> hrs, <%=spellDay[issue.dateCreated.getDay()]%>,  <%=issue.dateCreated.getDate()%>  <%=spellMonth[issue.dateCreated.getMonth()+1]%> <%=issue.dateCreated.getFullYear()%>)</small>
@@ -22,16 +22,18 @@
             frameborder="0" style="border:0"
             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyByUpVKGIl-ZT0MxU0yJBBIDdL_SIEVrJg&q=<%=issue.address%>" allowfullscreen>
             </iframe>
-          <div class="panel-body single-request end">
+          <div class="panel-body single-request">
             <h5>Location: <%= issue.address %></h5>
-            <a href="/issues/<%=issue.id%>" class="btn btn-primary">
+          </div>
+          <div class="panel-body single-request end">
+            <a href="/issues/<%=issue.id%>" class="btn btn-primary col-sm-6">
               <span class="glyphicon glyphicon-eye-open"></span> View
             </a>
 
             <% if( issue.isFixed === false) {%>
 
               <form method="POST" action="/issues/<%=issue.id%>/fix?_method=PUT&isFixed=true">
-                <button class="btn btn-success" type="submit">
+                <button class="btn btn-success col-sm-6" type="submit">
                   <span class="glyphicon glyphicon-ok-circle"></span> Fix Issue
                 </button>
               </form>
