added gmaps cluster placeholder, added alert dashboard, fixed text submit for problems

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,9 @@
 <% include ./partials/header-inner %>
 
-<h1>Error</h1>
+<div class="container">
+  <h1>Error</h1>
 
-<h4>Message:</h4>
-<pre><%= error %></pre>
-<%# To display error message here %>
+  <h4>Message:</h4>
+  <pre><%= error %></pre>
+
+</div>
