--- a/public/css/style-2.css
+++ b/public/css/style-2.css
@@ -58,6 +58,13 @@ form {
   padding: 0px;
 }
 
+.huge {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0px;
+  margin: 0px;
+}
+
 #map {
   width: 100%;
   height: 400px;
