--- a/views/partials/header-inner.ejs
+++ b/views/partials/header-inner.ejs
@@ -10,7 +10,7 @@
             </div>
             <div class="collapse navbar-collapse navbar-left" id="mynavbar">
                 <ul class="nav navbar-nav">
-                  <li><a href="/issues">View All</a></li>
+                  <li><a href="/issues">Dashboard</a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="mynavbar">
