--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
                     </div>
                     <div class="collapse navbar-collapse navbar-left" id="mynavbar">
                         <ul class="nav navbar-nav">
-                          <li><a href="/issues">Dashboard</a></li>
+                          <li><a href="/issues">Home</a></li>
                         </ul>
                     </div>
                     <div class="collapse navbar-collapse navbar-right" id="mynavbar">
