changed textarea to input, completed README

--- a/views/issues/edit.ejs
+++ b/views/issues/edit.ejs
@@ -11,7 +11,7 @@
         <input type="text" class="form-control" name="issues[address]" id="address" value="<%= issueToEdit.address %>">
       </div>
       <div class="form-group col-md-12">
-        <textarea type="text" class="form-control" name="issues[problem]" id="problem" value="<%= issueToEdit.problem %>"></textarea>
+        <input type="text" class="form-control" name="issues[problem]" id="problem" value="<%= issueToEdit.problem %>">
       </div>
       <div class="form-group col-md-12">
         <button type="submit" class="btn btn-success btn-block">Resubmit issue</button>
