--- a/views/issues/new.ejs
+++ b/views/issues/new.ejs
@@ -13,7 +13,7 @@
         <input type="text" class="form-control" name="issues[address]" id="address" placeholder="Address (Block and Street)">
       </div>
       <div class="form-group col-md-12">
-        <textarea type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Describe your problem" rows="3"></textarea>
+        <input type="text" class="form-control" name="issues[problem]" id="problem" placeholder="Describe your problem">
       </div>
       <div class="form-group col-md-12">
         <button type="submit" class="btn btn-success btn-block">
