--- a/views/partials/adminMap.ejs
+++ b/views/partials/adminMap.ejs
@@ -121,4 +121,4 @@ function initMap() {
 
 </script>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GMAPS_API_KEY%>&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4B8No28ar6EO97U6XA0ZiTo1E9FASsas&callback=initMap"></script>
