--- a/views/partials/userCompletedRequests.ejs
+++ b/views/partials/userCompletedRequests.ejs
@@ -24,7 +24,7 @@
               frameborder="0" style="border:0"
               src="https://www.google.com/maps/embed/v1/place?key=AIzaSyByUpVKGIl-ZT0MxU0yJBBIDdL_SIEVrJg&q=<%=issue.address%>" allowfullscreen>
               </iframe>
-            <div class="panel-body single-request end">
+            <div class="panel-body single-request">
               <h5>Location: <%= issue.address %></h5>
             </div>
             <div class="panel-body single-request end">
